--- a/assets/html/partials/footer.html
+++ b/assets/html/partials/footer.html
@@ -91,6 +91,117 @@
             <img src="img/icons/paypal.svg" alt="">
         </div>
     </div>
+    <div class="popup popup-signin">
+        <div class="popup__wrap">
+            <div class="popup__close">
+                <i class="i-close"></i>
+            </div>
+            <div class="popup__title">
+                <p>Вход</p>
+            </div>
+            <div class="popup__content">
+                <form action="">
+                    <div class="wrap__row">
+                        <div class="wrap">
+                            <p>Email</p>
+                            <input type="email" placeholder="Введиете ваш Email">
+                        </div>
+                    </div>
+                    <div class="wrap__row">
+                        <div class="wrap">
+                            <p>Пароль</p>
+                            <input type="password" placeholder="Введиете ваш пароль">
+                        </div>
+                        <div class="forgot-pass">
+                            <p>забыли пароль?</p>
+                        </div>
+                    </div>
+                    <div class="account-edit_form_footer">
+                        <div class="canceling">Зарегистрироватся</div>
+                        <input type="submit" value="Войти">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="popup popup-change-pass">
+        <div class="popup__wrap">
+            <div class="popup__close">
+                <i class="i-close"></i>
+            </div>
+            <div class="popup__title">
+                <p>Забыли пароль</p>
+            </div>
+            <div class="popup__subtitle">
+                <p>Пожалуйста укажите email.
+                    Мы вышлем ссылку для востановления пароля.</p>
+            </div>
+            <div class="popup__content">
+                <form action="">
+                    <div class="wrap__row">
+                        <div class="wrap">
+                            <p>Email</p>
+                            <input type="email" placeholder="Введиете ваш Email">
+                        </div>
+                    </div>
+                    <div class="account-edit_form_footer">
+                        <input type="submit" value="Отправить">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="popup popup-change-pass-icon">
+        <div class="popup__wrap">
+            <div class="popup__close">
+                <i class="i-close"></i>
+            </div>
+            <div class="popup__title">
+                <p>Забыли пароль</p>
+            </div>
+            <div class="popup__icon">
+                <i class="i-mail2"></i>
+            </div>
+            <div class="popup__content">
+                <div class="popup__subtitle">
+                    <p> На почту <span>deni345elch@gmail.com</span> была выслана
+                        ссылка для обновления пароля.</p>
+                </div>
+            </div>
+            <div class="popup__content_ok">
+                <p>Ок</p>
+            </div>
+        </div>
+    </div>
+    <div class="popup popup-pass-recovery">
+        <div class="popup__wrap">
+            <div class="popup__close">
+                <i class="i-close"></i>
+            </div>
+            <div class="popup__title">
+                <p>Восстановление пароля</p>
+            </div>
+            <div class="popup__content">
+                <form action="">
+                    <div class="wrap__row">
+                        <div class="wrap">
+                            <p>Новый пароль</p>
+                            <input type="password" placeholder="Введиете новый пароль">
+                        </div>
+                    </div>
+                    <div class="wrap__row">
+                        <div class="wrap">
+                            <p>Подтвердить пароль</p>
+                            <input type="password" placeholder="Подтвердите новый пароль">
+                        </div>
+                    </div>
+                    <div class="account-edit_form_footer">
+                        <input type="submit" value="Подтвердить">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <script src="inc/modernizr.js"></script> <!-- Modernizr -->
     <!-- <script src="inc/jquery-2.1.4.js"></script> -->
     <script src="inc/jquery.mobile.custom.min.js"></script>
