--- a/assets/stylesheets/icons.scss
+++ b/assets/stylesheets/icons.scss
@@ -45,3 +45,11 @@
 .i-arrow2 {
   @include icon("\e90b", "icomoon");
 }
+
+.i-close {
+  @include icon("\e90c", "icomoon");
+}
+
+.i-mail2 {
+  @include icon("\e90d", "icomoon");
+}
