--- a/assets/stylesheets/bem/old.scss
+++ b/assets/stylesheets/bem/old.scss
@@ -1208,6 +1208,39 @@ body {
 .main-catalog_list_desktop {
     display: none;
     margin: 0 0 32px 0;
+
+    a {
+        transition: $t;
+        border-radius: 16px;
+        overflow: hidden;
+
+        &:hover {
+            .main-catalog_list_desktop_item-title {
+                &:before {
+                    top: 0
+                }
+            }
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(#000, 0);
+            transition: .3s;
+        }
+    }
+
+    &:hover a:not(:hover) {
+        filter: grayscale(100%);
+
+        &::after {
+            background-color: rgba(#000, 0.5);
+        }
+    }
 }
 
 .main-brands {
@@ -3027,6 +3060,20 @@ footer {
         background: #1D9FE6;
         text-align: center;
         position: absolute;
+
+        &:before {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 43px;
+            border-top: 2px solid #fff;
+            position: absolute;
+            top: -6px;
+            left: 0;
+            border-bottom-left-radius: 16px;
+            border-top-right-radius: 16px;
+            transition: $t;
+        }
     }
 
     .main-catalog_list_desktop_main-item>.main-catalog_list_desktop_item-title {
@@ -3036,7 +3083,6 @@ footer {
         left: 0;
         border-bottom-left-radius: 16px;
         border-top-right-radius: 16px;
-        border-top: 2px solid #fff;
     }
 
     .main-catalog_list_desktop_minor-item>.main-catalog_list_desktop_item-title {
@@ -3046,20 +3092,35 @@ footer {
         font-size: 25px;
         border-top-left-radius: 16px;
         border-bottom-right-radius: 16px;
-        border-bottom: 2px solid #fff;
+
+        &:before {
+            border-top-left-radius: 0;
+            border-bottom-right-radius: 16px;
+            border-bottom-left-radius: 0;
+            bottom: -6px;
+            top: auto;
+            border-top: none;
+            border-bottom: 2px solid #fff;
+        }
     }
 
     .main-catalog_list_desktop_sub-minor-item>.main-catalog_list_desktop_item-title {
         font-size: 25px;
         padding: 10px 23px;
         bottom: 0;
-        border-top: 2px solid #fff;
     }
 
     .main-catalog_list_desktop_sub-minor-item:nth-child(odd)>.main-catalog_list_desktop_item-title {
         right: 0;
         border-top-left-radius: 16px;
         border-bottom-right-radius: 16px;
+        border: none;
+
+        &:before {
+            border-top-left-radius: 16px;
+            border-bottom-right-radius: 16px;
+            border-top-right-radius: 0;
+        }
     }
 
     .main-catalog_list_desktop_sub-minor-item:nth-child(even)>.main-catalog_list_desktop_item-title {
@@ -3111,6 +3172,15 @@ footer {
 
     .main-catalog_list_desktop_minor-item:nth-child(2) {
         margin: 0 20px;
+
+        &:hover {
+            .main-catalog_list_desktop_item-title {
+                &:before {
+                    bottom: 0;
+                    top: auto;
+                }
+            }
+        }
     }
 
     .main-catalog_list_desktop_minor-item {
