--- a/assets/stylesheets/bem/old.scss
+++ b/assets/stylesheets/bem/old.scss
@@ -1253,6 +1253,7 @@ body {
     overflow-x: scroll;
     align-items: center;
     justify-content: space-between;
+    height: 96px;
 }
 
 .main-brands img {
@@ -1334,10 +1335,11 @@ body {
     font-family: var(--Fira-font);
     font-weight: 500;
     font-size: 28px;
-    margin: 15px auto;
+    margin: 17px auto;
     max-width: 1196px;
     align-self: flex-start;
     width: 100%;
+    margin-top: 0;
 
 }
 
@@ -1357,6 +1359,8 @@ body {
     background: #fff;
     width: 46%;
     border-radius: 16px;
+    height: 439px;
+    position: relative;
 }
 
 .main-product-list_item>* {
@@ -1369,6 +1373,13 @@ body {
 
 .preview-product {
     width: 100%;
+    height: 210px;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 .main-product-list_item:nth-child(odd) {
@@ -1437,7 +1448,6 @@ body {
 }
 
 .product-button-cart {
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1451,6 +1461,16 @@ body {
     font-weight: 700;
     box-shadow: 0px 2px 10px rgba(41, 96, 204, 0.3), 0px 2px 4px rgba(41, 96, 204, 0.3);
     border-radius: 10px;
+    position: absolute;
+    bottom: 9px;
+    left: 9px;
+    right: 9px;
+
+    @media (min-width: 1196px) {
+        bottom: 22px;
+        left: 20px;
+        right: 20px;
+    }
 
     &:hover {
         box-shadow: none;
@@ -2796,6 +2816,7 @@ footer {
 
     .main-title {
         font-size: 38px;
+        line-height: 46px;
     }
 
     .filter-mobile-wrapper>* {
@@ -2956,7 +2977,7 @@ footer {
     }
 
     .main-product-list_item {
-        padding: 15px;
+        padding: 19px;
     }
 
     .main-katalog-wrapper {
