--- a/assets/html/partials/basket/basket.html
+++ b/assets/html/partials/basket/basket.html
@@ -197,10 +197,10 @@
                         <p>Сумма: <span>3000 ₴</span></p>
                     </div>
                     <div class="basket__footer_btns">
-                        <button class="basket__footer_btn">
+                        <button class="basket__footer_btn btn-animate">
                             продолжить покупки
                         </button>
-                        <button class="basket__footer_btn">
+                        <button class="basket__footer_btn btn-aminate2">
                             Оформить заказ
                         </button>
                     </div>
@@ -218,7 +218,7 @@
                 <div class="basket__empty_subtitle">
                     <p>Но это легко исправить :)</p>
                 </div>
-                <a class="basket__empty_btn">Перейти к покупкам</a>
+                <a class="basket__empty_btn btn-animate">Перейти к покупкам</a>
             </div>
         </div>
     </section>
