--- a/assets/html/partials/product_page/product_page.html
+++ b/assets/html/partials/product_page/product_page.html
@@ -138,7 +138,8 @@
                                 </svg>
                             </div>
                         </div>
-                        <button type="submit">Купить <img src="img/icons/whiteCart.svg" alt=""></button>
+                        <button class="btn-animate" type="submit">Купить <img src="img/icons/whiteCart.svg"
+                                alt=""></button>
                     </form>
                 </div>
                 <a href="" class="main-products-page-info_favorite"><img src="img/icons/heartGrey.svg" alt="">В
