--- a/assets/html/partials/signup/signup.html
+++ b/assets/html/partials/signup/signup.html
@@ -54,7 +54,7 @@
         </div>
         <div class="account-edit_form_footer">
           <a class="canceling">Я уже зарегистрирован</a>
-          <input type="submit" value="Зарегистрироватся">
+          <input class="btn-animate" type="submit" value="Зарегистрироватся">
         </div>
       </form>
     </div>
