--- a/assets/stylesheets/bem/old.scss
+++ b/assets/stylesheets/bem/old.scss
@@ -1250,6 +1250,7 @@ body {
     display: flex;
     margin: 0 0 5px 0;
     padding: 12px 0 12px 19px;
+    overflow: hidden;
     overflow-x: scroll;
     align-items: center;
     justify-content: space-between;
@@ -1373,7 +1374,11 @@ body {
 
 .preview-product {
     width: 100%;
-    height: 210px;
+    height: 129px;
+
+    @media(min-width: 1196px) {
+        height: 210px;
+    }
 
     img {
         width: 100%;
@@ -1430,11 +1435,19 @@ body {
     font-family: var(--Fira-font);
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
 }
 
 .product-list-prices_item:first-child {
     margin: 0 0 10px 0;
+}
+
+.product-list-prices_item {
+    &:last-child {
+        p {
+            font-size: 22px;
+        }
+    }
 }
 
 .product-list-prices_item span {
@@ -1465,9 +1478,16 @@ body {
     bottom: 9px;
     left: 9px;
     right: 9px;
+    flex-direction: row-reverse;
+
+    &:before {
+        font-size: 20px;
+        margin-left: 23px;
+        font-weight: 100;
+    }
 
     @media (min-width: 1196px) {
-        bottom: 22px;
+        bottom: 20px;
         left: 20px;
         right: 20px;
     }
@@ -1483,8 +1503,9 @@ body {
 }
 
 .main-new_link {
-    padding: 15px 20px;
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-transform: uppercase;
     color: var(--main-color);
     border-radius: 10px;
@@ -1494,6 +1515,8 @@ body {
     letter-spacing: 1px;
     font-weight: 700;
     font-size: 12px;
+    width: 255px;
+    height: 44px;
 }
 
 .main-pluses_item {
@@ -3070,6 +3093,10 @@ footer {
         width: 50%;
     }
 
+    .main-catalog_list_desktop_sub-minor-item {
+        height: 144px;
+    }
+
     .main-catalog_list_desktop_main-item,
     .main-catalog_list_desktop_minor-item,
     .main-catalog_list_desktop_sub-minor-item {
@@ -3118,6 +3145,7 @@ footer {
             border-top-left-radius: 0;
             border-bottom-right-radius: 16px;
             border-bottom-left-radius: 0;
+            border-top-right-radius: 0;
             bottom: -6px;
             top: auto;
             border-top: none;
@@ -3141,6 +3169,7 @@ footer {
             border-top-left-radius: 16px;
             border-bottom-right-radius: 16px;
             border-top-right-radius: 0;
+            border-bottom-left-radius: 0;
         }
     }
 
