--- a/assets/stylesheets/@application.scss
+++ b/assets/stylesheets/@application.scss
@@ -1,6 +1,7 @@
 @import "node_modules/normalize.css/normalize";
 @import "node_modules/bourbon/core/_bourbon";
 @import "node_modules/swiper/swiper";
+@import "node_modules/select2/dist/css/select2.min";
 
 
 // mixins
