mobile and product popup carousel

--- a/assets/html/partials/account/myorders.html
+++ b/assets/html/partials/account/myorders.html
@@ -20,10 +20,10 @@
             <a href="favorite.html"><i class="i-favorite"></i> Избранное</a>
           </li>
           <li>
-            <a href="myorders.html"><i class="i-myorders"></i> Мои заказы</a>
+            <a class="active" href="myorders.html"><i class="i-myorders"></i> Мои заказы</a>
           </li>
           <li>
-            <a class="active" href="viewed.html"><i class="i-viewed"></i> Просмотренные товары</a>
+            <a href="viewed.html"><i class="i-viewed"></i> Просмотренные товары</a>
           </li>
         </ul>
       </div>
