--- a/assets/html/partials/footer.html
+++ b/assets/html/partials/footer.html
@@ -202,6 +202,45 @@
             </div>
         </div>
     </div>
+    <div class="popup popup-carousel">
+        <div class="carousel_button left">
+            <svg width="14" height="33" viewBox="0 0 18 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.499756 17.1247C0.207581 16.7595 0.207582 16.2405 0.499757 15.8753L12.2191 1.22608C12.8096 0.487946 14 0.905504 14 1.85078L14 31.1492C14 32.0945 12.8096 32.5121 12.2191 31.7739L0.499756 17.1247Z" fill="white"/>
+            </svg>
+        </div>
+        <div class="popup__wrap">
+            <div>
+                <div class="popup__close">
+                    <i class="i-close"></i>
+                </div>
+                <div class="popup__carousel">
+                    <div class="image-item active">
+                        <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="image-item">
+                        <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="image-item">
+                        <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                    <div class="image-item">
+                        <img src="img/images/cardImage1.jpg" alt="">
+                    </div>
+                </div>
+                <div class="popup__carousel-navigation-list">
+                    <div class="navigation-item active"></div>
+                    <div class="navigation-item"></div>
+                    <div class="navigation-item"></div>
+                    <div class="navigation-item"></div>
+                </div>
+            </div>
+        </div>
+        <div class="carousel_button right">
+            <svg width="14" height="33" viewBox="0 0 14 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M13.5002 17.1247C13.7924 16.7595 13.7924 16.2405 13.5002 15.8753L1.78087 1.22608C1.19036 0.487946 8.32922e-08 0.905504 1.24612e-07 1.85078L1.40529e-06 31.1492C1.44661e-06 32.0945 1.19036 32.5121 1.78087 31.7739L13.5002 17.1247Z" fill="white"/>
+            </svg>
+         </div>
+    </div>
     <script src="inc/modernizr.js"></script> <!-- Modernizr -->
     <!-- <script src="inc/jquery-2.1.4.js"></script> -->
     <script src="inc/jquery.mobile.custom.min.js"></script>
