--- a/assets/stylesheets/bem/popup.scss
+++ b/assets/stylesheets/bem/popup.scss
@@ -33,6 +33,7 @@
     padding: 45px 0;
     opacity: 0;
     transition: $t;
+
   }
 
   &__close {
@@ -163,6 +164,78 @@
   &-pass-recovery {
     .popup__title {
       padding-bottom: 36px;
+    }
+  }
+
+  &__carousel{
+    padding: 100px;
+    
+    .image-item{
+      display: none;
+
+      &.active{
+        display: block;
+      }
+    }
+  }
+
+  &__carousel-navigation-list{
+    margin: auto;
+    height: 100%;
+    justify-content: center;
+    display: flex;
+
+    .navigation-item{
+        display: inline-block;
+        width: 20px;
+        height: 9px;
+        border-radius: 15px;
+        background-color: white;
+        border: solid #25B4E5 1px;
+        cursor: pointer;
+        margin-right: 5px;
+        transition: 0.2s linear all;
+
+        &:last-child{
+          margin-right: 5px;
+        }
+
+        &.active{
+          background-color: #25B4E5;
+          width: 45px;
+          transition: 0.1s linear all;
+        }
+    }
+  }
+}
+
+.popup-carousel{
+  .carousel_button{
+    width: 80px;
+    height: 80px;
+    background-color: #000000;
+    opacity: 0.25;
+    border-radius: 20px;
+
+    svg{
+      width: 100%;
+      height: 100%;
+      display: block;
+      margin: auto;
+    }
+
+    &.left{
+      margin-right: 10px;
+      svg{
+        margin-right: 10px;
+      }
+    }
+
+    &.right{
+      margin-left: 10px;
+      svg{
+        margin-left: 10px;
+      }
     }
   }
 }
